Nav Contrast fix and contact margin

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -36,7 +36,7 @@ form {
     font-size: 0.9rem;
   }
   .button {
-    margin: 50px 0;
+    margin: 50px 0 0 0;
     padding: 1.5rem 1.5rem;
     width: 80%;
     background: #34495e;
