--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -9,6 +9,8 @@ body {
 .nav-bar {
   display: flex;
   height: 10vh;
+  width: 100%;
+  background-color: rgba($color: #000000, $alpha: 0.5);
   z-index: 999;
   align-items: center;
   color: white;
@@ -27,8 +29,9 @@ body {
     display: none;
   }
   .nav-items {
-    transform: translateX(calc(100vw - 150%));
+    // transform: translateX(calc(100vw - 150%));
     list-style: none;
+    padding-right: 50px;
     display: flex;
     justify-content: space-around;
     height: 10vh;
@@ -68,6 +71,7 @@ li.nav-item:hover::after {
       flex-direction: column;
       justify-content: center;
       position: absolute;
+      padding: 0;
       right: 0;
       top: 0;
       width: 50%;
