--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   height: 10vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -53,9 +55,8 @@ body {
 }
 
 .nav-bar .nav-items {
-  -webkit-transform: translateX(calc(100vw - 150%));
-          transform: translateX(calc(100vw - 150%));
   list-style: none;
+  padding-right: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -108,6 +109,7 @@ li.nav-item:hover::after {
         -ms-flex-pack: center;
             justify-content: center;
     position: absolute;
+    padding: 0;
     right: 0;
     top: 0;
     width: 50%;
@@ -630,7 +632,7 @@ form textarea {
 }
 
 form .button {
-  margin: 50px 0;
+  margin: 50px 0 0 0;
   padding: 1.5rem 1.5rem;
   width: 80%;
   background: #34495e;
